--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,6 @@
             "email": "jeremeamia@gmail.com"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/jeremeamia/acclimate"
-        }
-    ],
     "require": {
         "php": ">=5.3.3",
         "jeremeamia/acclimate": "dev-master"
@@ -22,6 +16,7 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "Jeremeamia\\XStatic": "src/"
