--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,24 @@
     "name": "jeremeamia/xstatic",
     "description": "Static interfaces without static pitfalls",
     "license": "MIT",
-    "keywords": ["static", "static interface", "facade", "facades", "interface", "container"],
+    "keywords": ["static", "static proxy", "proxy", "facade", "facades", "interface", "container", "service locator"],
     "authors": [
         {
             "name": "Jeremy Lindblom",
-            "email": "jeremeamia@gmail.com"
+            "email": "jeremeamia@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
         "php": ">=5.3.3",
-        "acclimate/api": "dev-master"
+        "container-interop/container-interop": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
     },
-    "minimum-stability": "dev",
     "autoload": {
-        "psr-0": {
-            "Jeremeamia\\XStatic": "src/"
+        "psr-4": {
+            "XStatic\\": "src/"
         }
     }
 }
