--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "container-interop/container-interop": "~1.0"
+        "psr/container": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
